--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
+      
+      - name: Cache PyInstaller
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pyinstaller
+            build
+          key: ${{ runner.os }}-pyinstaller-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pyinstaller-
       
       - name: Install dependencies
         run: |
@@ -46,6 +57,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
+      
+      - name: Cache PyInstaller
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pyinstaller
+            build
+          key: ${{ runner.os }}-pyinstaller-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pyinstaller-
       
       - name: Install dependencies
         run: |
@@ -75,6 +97,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
+      
+      - name: Cache PyInstaller
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pyinstaller
+            build
+          key: ${{ runner.os }}-pyinstaller-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pyinstaller-
       
       - name: Install dependencies
         run: |
