feat: Add comprehensive GitHub issue and PR templates with automated workflows
- Add 8 detailed issue templates (documentation, performance, security, installation, export, refactoring, format-support, analysis-feature)
- Add 5 specialized PR templates (bugfix, feature, documentation, refactoring, performance)
- Update issue template config with better navigation links
- Add SUPPORT.md for community help resources
- Add CODEOWNERS for automatic review assignments
- Add dependabot.yml for automated dependency updates
- Add stale.yml for issue/PR management
- Add labeler.yml and pr-labeler.yml for auto-labeling
- Add workflows for PR checks, CodeQL security scanning, documentation validation, and greetings
- Add markdown link checker and release notes configuration

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,12 +1,20 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
 contact_links:
-  - name: 📚 Documentation
+  - name: 📚 Documentation Hub
     url: https://github.com/Tfc538/MuseStat/blob/main/docs/INDEX.md
-    about: Check the documentation for guides and tutorials
-  - name: ❓ FAQ
+    about: Complete documentation index with all guides and tutorials
+  - name: 🚀 Getting Started Guide
+    url: https://github.com/Tfc538/MuseStat/blob/main/docs/getting-started.md
+    about: Quick start guide for new users
+  - name: ❓ Frequently Asked Questions
     url: https://github.com/Tfc538/MuseStat/blob/main/docs/faq.md
-    about: Frequently Asked Questions
+    about: Common questions and troubleshooting tips
   - name: 📖 User Guide
     url: https://github.com/Tfc538/MuseStat/blob/main/docs/user-guide.md
-    about: Complete user guide with examples
-
+    about: Complete user guide with detailed examples
+  - name: 🎯 Quick Reference
+    url: https://github.com/Tfc538/MuseStat/blob/main/docs/quick-reference.md
+    about: Command-line reference and common use cases
+  - name: ✨ Feature Overview
+    url: https://github.com/Tfc538/MuseStat/blob/main/docs/features.md
+    about: Detailed feature documentation
